--- a/portfolio/all.html
+++ b/portfolio/all.html
@@ -45,18 +45,6 @@
       <div class="column two-thirds">
         <ul class="list portfolio">
           <li class="list__item">
-            <a href="/portfolio/paw.html">
-              <span class="label">Princeton Alumni Magazine</span>
-              <div class="description">Site Design and Drupal build.</div>
-            </a>
-          </li>
-          <li class="list__item">
-            <a href="/portfolio/mena.html">
-              <span class="label">Mass. Emergency Nurse Association</span>
-              <div class="description">Site design and Drupal build.</div>
-            </a>
-          </li> 
-          <li class="list__item">
             <a href="/portfolio/brm.html">
               <span class="label">Bally Ribbon Mills</span>
               <div class="description">Site design and Drupal build.</div>
@@ -66,6 +54,24 @@
             <a href="/portfolio/cpl.html">
               <span class="label">Cambridge Public Library</span>
               <div class="description">Enviromental Signage and Wayfinding.</div>
+            </a>
+          </li>
+          <li class="list__item">
+            <a href="/portfolio/fitnessapp.html">
+              <span class="label">Elev8d Fitness</span>
+              <div class="description">Angular Video Component and Playlist.</div>
+            </a>
+          </li> 
+          <li class="list__item">
+            <a href="/portfolio/mena.html">
+              <span class="label">Mass. Emergency Nurse Association</span>
+              <div class="description">Site design and Drupal build.</div>
+            </a>
+          </li>
+          <li class="list__item">
+            <a href="/portfolio/paw.html">
+              <span class="label">Princeton Alumni Magazine</span>
+              <div class="description">Site Design and Drupal build.</div>
             </a>
           </li>
         </ul>
