--- a/portfolio/brm.html
+++ b/portfolio/brm.html
@@ -33,7 +33,7 @@
       </nav>
 
       <div class="column half text--center">
-        <h1 class="page__title">Bally Ribbon Mills</h1>
+        <h1 class="page__title">Bally <wbr>Ribbon Mills</h1>
         <p class="description">Site Design and Build</p>
       </div>
 
