--- a/portfolio/cpl.html
+++ b/portfolio/cpl.html
@@ -33,7 +33,7 @@
       </nav>
 
       <div class="column half text--center">
-        <h1 class="page__title">Cambridge Public Library</h1>
+        <h1 class="page__title">Cambridge <wbr>Public Library</h1>
         <p class="description">Wayfinding and Signage</p>
       </div>
 
