--- a/portfolio/fitnessapp.html
+++ b/portfolio/fitnessapp.html
@@ -25,7 +25,7 @@
 </head>
 <body class="page page--front">
 
-  <header class="container size-to-window elv8d">
+  <header class="container size-to-window elev8d">
     <div class="row flex flex-align--center flex--justify fill-height">
 
       <nav class="position-top-left">
@@ -44,35 +44,27 @@
     <div class="row flex flex--justify pad-default">
       <div class="column two-thirds">
         <article class="content">
-          <h4>Pellentesque Vehicula Ultricies</h4>
+          <h4>HTML5 Video Magic</h4>
 
-          <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur. Donec sed odio dui. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+          <p>Elev8d Fitness provided members with full-length video workouts as well as guided video playlists. The original Angular build was riddled with bugs and had a very confusing design. This was a webview app so that presented a lot of challenges with video playback. We were able to design a player that simplified the UI and allowed seamless playing. A lot of time was spent on the animation and transition to provide a more native experience. This project was the first time I had worked with Angular v5 and typescript. Unfamiliarity and fixing someone else's code made this project a challenge. </p>
 
-          <video controls width="250">
-            <source src="/media/examples/flower.webm"
+          <div class="specimen">
+            <img src="../assets/img/projects/elev8d/video-player.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Redesigned Player.</div>
+          </div>
+
+          <div class="specimen">
+            <img src="../assets/img/projects/elev8d/060-screenshot.jpg"
+                 alt="Elephant at sunset" class="paper">
+            <div class="caption">Original Player.</div>
+          </div>
+
+          <video controls width="100%" class="video-player">
+            <source src="../assets/video/video-player-workout.webm"
                     type="video/webm">
-            <source src="/media/examples/flower.mp4"
-                    type="video/mp4">
             Sorry, your browser doesn't support embedded videos.
           </video>
-
-          <div class="specimen">
-            <img src="../assets/img/case-studies/test-2.jpg"
-                 alt="Elephant at sunset">
-            <div class="caption">Donec id elit non mi porta gravida at eget metus.</div>
-          </div>
-
-          <div class="specimen">
-            <img src="../assets/img/case-studies/test.png"
-                 alt="Elephant at sunset">
-            <div class="caption">Donec id elit non mi porta gravida at eget metus.</div>
-          </div>
-
-          <div class="specimen">
-            <img src="https://via.placeholder.com/600"
-                 alt="Elephant at sunset">
-            <div class="caption">Donec id elit non mi porta gravida at eget metus.</div>
-          </div>
           
           <div class="credits">
             <p class="attribution">Work done at Brunello, Inc.</p>
