--- a/portfolio/mena.html
+++ b/portfolio/mena.html
@@ -33,7 +33,7 @@
       </nav>
 
       <div class="column half text--center">
-        <h1 class="page__title">Mass. Emergency Nurse Association</h1>
+        <h1 class="page__title">Mass. Emergency <wbr>Nurse Association</h1>
         <p class="description">Site Design and Build</p>
       </div>
 
