--- a/portfolio/paw.html
+++ b/portfolio/paw.html
@@ -52,7 +52,7 @@
             <div class="caption">Screenshot</div>
           </div>
 
-          <p>My accomplishments for this project include crafting a process from design to development. I designed reusable components and list styles that were used to layout all the pages of the site. I was responsible for creating the sitemap, mobile-priority, wireframes, and working prototype. I also produced all the front-end production code, much of which was recycled from the prototype.</p>
+          <p>My accomplishments for this project include crafting a process from research to development. I designed reusable components and list styles that were used to layout all the pages of the site. I was responsible for creating the sitemap, mobile-priority, layout wireframes, and working prototype. I also produced all the front-end production code, much of which was recycled from the prototype.</p>
 
           <div class="specimen">
             <img src="../assets/img/projects/paw/way-back.jpg"
@@ -154,7 +154,7 @@
 
           <p>Article Page</p>
           <div class="specimen">
-            <img src="../assets/img/projects/paw/wireframe-rwd-article-page.jpg"
+            <img src="../assets/img/projects/paw/wireframe-rwd-article-page.png"
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Full Fidelity Wireframe - Kyle Langford</div>
           </div>
