--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- 1.1 - ntro Description  -->
         <h2 class="section__title">Welcome!</h2>
 
-        <p class="text--large">This is my website. It explains a bit of what I do and provides an outlet for professional networking and personal projects. I work as a Senior Designer and Front-end Developer for a Boston based web agency. I have 10 years experience and have worked on hundreds of projects over that time. I am passionate about helping people use technology through design and code. I have a positive attitude and enjoy working on all types of projects. </p>
+        <p class="text--large">I work as a Senior Designer and Front-end Developer for a Boston based web agency. I have 10 years experience and have worked on hundreds of projects over that time. I am passionate about helping people use technology through design and code. I have a positive attitude and enjoy working on all types of projects. </p>
 
       </div>
 
@@ -233,7 +233,7 @@
           <li class="list__item">
             <a href="/portfolio/all.html"><span class="icon-list icons-bookmark"></span>Portfolio</a></li>
           <li class="list__item">
-            <a href="/assets/pdf/klangford_resume2018.pdf"><span class="icon-list icons-bookmark"></span>Request Resume</a></li>
+            <a href="/assets/pdf/klangford_resume2019.pdf"><span class="icon-list icons-bookmark"></span>Request Resume</a></li>
           </ul>
       </div>
     </div>
