--- a/index.html
+++ b/index.html
@@ -229,11 +229,9 @@
         <p class="list-title">Links</p>
           <ul class="pretty">
           <li class="list__item">
+            <a href="/portfolio/all.html"><span class="icon-list"></span>Portfolio</a></li>
+          <li class="list__item">
             <a href="/pages/bookmarks.html"><span class="icon-list icons-bookmark"></span>My Bookmarks</a></li>
-          <li class="list__item">
-            <a href="/portfolio/all.html"><span class="icon-list icons-bookmark"></span>Portfolio</a></li>
-          <li class="list__item">
-            <a href="/assets/pdf/klangford_resume2019.pdf"><span class="icon-list icons-bookmark"></span>Request Resume</a></li>
           </ul>
       </div>
     </div>
@@ -248,7 +246,7 @@
     </footer>
   </section>
 
-  <div class="hint icons-chevron-down animated infinite bounce"></div>
+  <!-- <div class="hint icons-chevron-down animated infinite bounce"></div> -->
 
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> <!-- CDN -->
