--- a/portfolio/brm.html
+++ b/portfolio/brm.html
@@ -46,7 +46,7 @@
         <article class="content">
           <h4>Can you tell me again what you do?</h4>
 
-          <p>One of my first design projects at Brunello was for a company that produced narrow fabric and advanced composites for industrial/military application. It was important for Bally to be Modern and Authoritive. This design for Bally Ribbon Mills has held up well over the years, even longer then the site itself! This project used sitemaps, wireframes, style-tiles, and full-page mockups. I built the site in Drupal 7.</p>
+          <p>One of my first design projects at Brunello was for a company that produced narrow fabric and advanced composites for industrial/military application. It was important for Bally to be Modern and Authoritive. This design for Bally Ribbon Mills has held up well over the years, even longer than the site itself! This project used sitemaps, wireframes, style-tiles, and full-page mockups. I built the site in Drupal 7.</p>
 
           <div class="specimen">
             <img src="../assets/img/projects/brm/design-homepage_v3c.jpg"
