--- a/portfolio/cpl.html
+++ b/portfolio/cpl.html
@@ -44,7 +44,7 @@
     <div class="row flex flex--justify pad-default">
       <div class="column two-thirds">
         <article class="content">
-          <p>This project was for the Cambridge Public Library with the addition of the renovated modern wing. I worked as a project designer with the principal designer to create designs and draft the art work sent to the fabricators. This work included all signage for the interior and exterior of the building.</p>
+          <p>This project was for the Cambridge Public Library with the addition of the modern wing. I worked as a project designer with the principal designer to create designs and draft the artwork sent to the fabricators. This work included all signage for the interior and exterior of the building.</p>
 
           <div class="specimen">
             <img src="../assets/img/projects/cpl/p-cpl.jpg"
