--- a/portfolio/fitnessapp.html
+++ b/portfolio/fitnessapp.html
@@ -46,7 +46,7 @@
         <article class="content">
           <h4>HTML5 Video Magic</h4>
 
-          <p>Elev8d Fitness provided members with full-length video workouts as well as guided video playlists. The original Angular build was riddled with bugs and had a very confusing design. This was a webview app so that presented a lot of challenges with video playback. We were able to design a player that simplified the UI and allowed seamless playing. A lot of time was spent on the animation and transition to provide a more native experience. This project was the first time I had worked with Angular v5 and typescript. Unfamiliarity and fixing someone else's code made this project a challenge. </p>
+          <p>Elev8d Fitness app provided users with full-length video workouts as well as guided video playlists. The original Angular build was riddled with bugs and had a very confusing design. This was a webview app so that presented a lot of challenges with video playback. We were able to design a player that simplified the UI and allowed seamless playing. I focused on transitions and animation to give a more native app feel. This project was the first time I had worked with Angular v5 and typescript which made this challanging.</p>
 
           <div class="specimen">
             <img src="../assets/img/projects/elev8d/video-player.jpg"
