--- a/portfolio/mena.html
+++ b/portfolio/mena.html
@@ -46,7 +46,7 @@
         <article class="content">
           <h4>Labor of Love</h4>
 
-          <p>The Mass. Emergency Nurse Association is the state chapter of the national organization. They needed a website to post information and organize events. My wife is a nurse and also a member so this project held a little extra weight. There was a knowledge gap in this project so I decided the best way to show a design was to build it. I utilized mood-boards to show look and feel then implemented the remaining features based on that.</p>
+          <p>The Mass. Emergency Nurse Association is the state chapter of the national organization. They needed a website to post information and organize events. There was a knowledge gap in this project so I decided the best way to show design was to build it. I utilized mood-boards to show look and feel then implemented the remaining features based on that.</p>
 
           <div class="specimen">
             <img src="../assets/img/projects/mena/maena-moodboard_v2d.png"
@@ -69,7 +69,7 @@
           <p>Design Prototype</p>
           
           <div class="button-group">
-            <a href="/demo/mena.wires/index.php" class="button button--primary">Prototype</a>
+            <a href="/demo/mena.wires/index.php" class="button button--primary">View Prototype</a>
           </div>
           
           <div class="credits">
