--- a/portfolio/paw.html
+++ b/portfolio/paw.html
@@ -104,7 +104,7 @@
             <div class="caption">I created this Content Inventory &mdash; to show at a block level the heirarchy of information for the page. We created a list of all possible blocks and used that to scaffold out all the page types. Types were assigned to blocks of similar functionality to display placements. </div>
           </div>
 
-          <p>Modular Design was important to the layout of this site. I wanted to create something predictable and easy to read. It was important to our development process that the site was component based. Building in this way allowed for greater efficiency and added to the maintainability of the code.</p>
+          <p>Modular Design was important to the layout of this site. It was important to our development process that the site was component based. Building in this way allowed for greater efficiency and added to the maintainability of the code.</p>
 
           <p>Article List Arrangements</p>
           <div class="specimen">
@@ -156,10 +156,10 @@
           <div class="specimen">
             <img src="../assets/img/projects/paw/wireframe-rwd-article-page.png"
                  alt="Elephant at sunset" class="paper">
-            <div class="caption">Full Fidelity Wireframe - Kyle Langford</div>
+            <div class="caption">Full Fidelity Wireframe</div>
           </div>
 
-          <p>My proposal was to only produce 5 wireframes at phone/tablet/desktop. The rest of the site would be designed using a components derived from those pages. The goal was to make a fully working version of the site in html/css/js and show it to the client. Changes would be incorporated directly into the prototype speeding up our process. This would be a huge departure from what we had done in the past. Luckily the group at PAW was supportive and interested in new ways of working.</p>
+          <p>My proposal was to only produce 5 wireframes at phone/tablet/desktop. The rest of the site would be designed using a components derived from those pages. The goal was to make a fully working version of the site in html/css/js and show it to the client. Changes would be incorporated directly into the prototype speeding up our process. This would be a big departure from what we had done in the past. Luckily the group at PAW was supportive and interested in new ways of working.</p>
 
           <p>I devised a simple template system that I used to create the prototype. This made the process extremely managable and about 2000 lines of CSS were reused to start the production build. We were able to show more pages at more screen sizes than we did prevously. We ended with 41 pages made with approx 30 components with about 100 variations. </p>
 
@@ -167,10 +167,10 @@
 $(elem).appendTo('.header-region').load("inc/header.html");
           </code></pre>
 
-          <p>The final designs were produced by Jay Fournier and the site was built in Drupal 7 by Mike Calebrese. I did the front-end development. Below is a working version of that prototype, follow the orange dots.</p>
+          <p>The final designs were produced by Jay Fournier and the site was built in Drupal 7 by Mike Calebrese. I did the front-end development and consulted on site architecture. Below is a working version of that prototype, follow the orange dots for active links.</p>
 
           <div class="text--center button-group">
-            <a href="/demo/paw.wires/index.html" class="button button--primary">Prototype</a>          
+            <a href="/demo/paw.wires/index.html" class="button button--primary">View Prototype</a>          
             <a href="https://paw.princeton.edu" class="button">Live Site</a>
           </div>
 
