--- a/portfolio/mena.html
+++ b/portfolio/mena.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>BRM | Kyle Langford</title>
+  <title>MENA | Kyle Langford</title>
 
   <meta name="description" content="My name is Kyle Langford, and this is my web design and development portfolio.">
   <meta name="author" rel="me" content="Kyle Langford">
