--- a/portfolio/fitnessapp.html
+++ b/portfolio/fitnessapp.html
@@ -63,6 +63,9 @@
           <video controls width="100%" class="video-player">
             <source src="../assets/video/video-player-workout.webm"
                     type="video/webm">
+            <source src="../assets/video/video-player-workout.mp4"
+                    type="video/mp4">
+
             Sorry, your browser doesn't support embedded videos.
           </video>
           
