updaint pdf path

--- a/index.html
+++ b/index.html
@@ -229,9 +229,11 @@
         <p class="list-title">Links</p>
           <ul class="pretty">
           <li class="list__item">
-            <a href="/portfolio/all.html"><span class="icon-list"></span>Portfolio</a></li>
+            <a href="/portfolio/all.html"><span class="icon-list icons-award"></span>Portfolio</a></li>
           <li class="list__item">
             <a href="/pages/bookmarks.html"><span class="icon-list icons-bookmark"></span>My Bookmarks</a></li>
+          <li class="list__item">
+            <a href="/assets/pdf/klangford_2019.pdf"><span class="icon-list icons-download-cloud"></span>Resume</a></li>
           </ul>
       </div>
     </div>
