--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="My name is Kyle Langford, and this is my web design and development portfolio.">
+  <meta name="description" content="My name is Kyle Langford, and this is my Design and Web Development portfolio.">
   <meta name="author" rel="me" content="Kyle Langford">
 
-  <title>Web Design and Development | Kyle Langford</title>
+  <title>Design and Web Development | Kyle Langford</title>
 
   <!-- Load Resources -->
   <link rel="icon" type="image/png" href="../img/brand/favicon.png">
@@ -22,10 +22,10 @@
 
   <header class="container intro">
     <div class="row flex flex-align--center flex--justify fill-height">
-      <!-- 1.0 - Intro Bio -->
+      <!-- 1.0 - Intro Name -->
       <div class="column half text--center">
         <h1 class="page__title">Kyle Langford</h1>
-        <h2 class="page__sub-title">Web Designer and Developer</h2>
+        <h2 class="page__sub-title">Designer and Web Developer</h2>
         <p class="description">Boston, MA</p>
       </div>
     </div>
@@ -35,10 +35,10 @@
     <div class="row flex flex-align--center fill-height pad-default">
       <div class="column two-thirds animate fade-in">
 
-        <!-- 1.1 - ntro Description  -->
+        <!-- 1.1 - Intro Description  -->
         <h2 class="section__title">Welcome!</h2>
 
-        <p class="text--large">I work as a Senior Designer and Front-end Developer for a Boston based web agency. I have 10 years experience and have worked on hundreds of projects over that time. I am passionate about helping people use technology through design and code. I have a positive attitude and enjoy working on all types of projects. </p>
+        <p class="text--large">I work as a Designer and Web Developer for a Boston based agency. I have 10 years experience and have worked on hundreds of projects over that time. I am passionate about helping people use technology through design and code. I have a positive attitude and enjoy working on all types of projects. </p>
 
       </div>
 
@@ -80,16 +80,6 @@
           <li>Sketch</li>
         </ul>  
       </div>
-      
-<!--       <div class="column one-fourth animate fade-in">
-        <div class="card">
-          <p class="list-title">Design Examples</p>
-          <ul class="pretty">
-            <li><span class="icons-corner-down-right"></span><a href="pages/case-study--paw.html">Princeton Alumni Mag.</a></li>
-            <li><span class="icons-corner-down-right"></span><a href="pages/case-study--elev8d.html">Elev8d Fitness Video Player</a></li>
-          </ul>
-        </div>
-      </div> -->
     </div>
   </section>
 
@@ -101,8 +91,6 @@
         <p>Plan. Implement. Iterate.</p>
       </div>
     </header>
-
-    <!-- <div class="special"> -->
 
     <div class="row flex  pad-default">
       <div class="column one-fourth animate fade-in">
@@ -119,7 +107,7 @@
         </ul>
       </div>
 
-      <!-- 2.2 - UX Tools -->
+      <!-- 3.2 - UX Tools -->
       <div class="column one-fourth animate fade-in">
         <p class="list-title">UX Tools</p>
         <ul class="pretty">
@@ -130,14 +118,7 @@
         </ul>  
       </div>
 
-      <!--  <div class="column one-fourth animate fade-in">
-        <div class="card lgbg-2">
-           <h2><a href="/pages/site-audit.html">Request a<br>Site Audit.</a></h2>
-        </div>
-      </div> -->
-
     </div>
-  <!-- </div> -->
   </section>
 
   <section class="container size-to-window relative">
@@ -151,7 +132,7 @@
 
     <div class="row flex  pad-default">
 
-      <!-- 4.2 - Other -->
+      <!-- 4.1 - Capabilities -->
       <div class="column one-fourth animate fade-in">
         <p class="list-title">Capabilities</p>
         <ul class="pretty">
@@ -164,7 +145,7 @@
         </ul>
       </div>
 
-      <!-- 4.1 - Technology -->
+      <!-- 4.2 - Foundation -->
       <div class="column one-fourth animate fade-in">
         <p class="list-title">Foundation</p>
         <ul class="pretty">
@@ -178,13 +159,12 @@
         </ul>
       </div>
 
-      <!-- 4.1 - Content Manament Systems -->
+      <!-- 4.1 - Technologies -->
       <div class="column one-fourth animate fade-in">
         <p class="list-title">Technologies</p>
         <ul class="pretty">
           <li>Angular</li>
           <li><span class="icon-list gold-star icons-star"></span>Drupal CMS</li>
-          <!-- <li>Twig / Handlebars.js</li> -->
           <li>Node / Express</li>
           <li>Shopify</li>
           <li>Google Analytics</li>
@@ -196,7 +176,7 @@
   </section>
 
   <section class="container contact size-to-window relative">
-    <!-- 5.0 - Contact Info -->
+    <!-- 5.0 - Contact -->
     <header class="row pad-default">
       <div class="column">
         <h2 class="section__title">Contact</h2>
@@ -224,16 +204,18 @@
         Boston, MA <br>
         Salem, MA
       </div>
-      <!-- 5.3 - Useful Links -->
+      <!-- 5.3 - Misc Links -->
       <div class="column one-fourth animate fade-in">
         <p class="list-title">Links</p>
           <ul class="pretty">
           <li class="list__item">
-            <a href="/portfolio/all.html"><span class="icon-list icons-award"></span>Portfolio</a></li>
-          <li class="list__item">
             <a href="/pages/bookmarks.html"><span class="icon-list icons-bookmark"></span>My Bookmarks</a></li>
           <li class="list__item">
-            <a href="/assets/pdf/klangford_2019.pdf"><span class="icon-list icons-download-cloud"></span>Resume</a></li>
+            <a href="http://swordofdanklin.com"><span class="icon-list icons-bookmark"></span>Sword of Danklin</a></li>
+          <li class="list__item">
+            <a href="/portfolio/all.html"><span class="icon-list icons-award"></span>My Portfolio</a></li>
+          <li class="list__item">
+            <a href="/assets/pdf/klangford_2019.pdf"><span class="icon-list icons-download-cloud"></span>My Resume</a></li>
           </ul>
       </div>
     </div>
@@ -251,6 +233,7 @@
   <!-- <div class="hint icons-chevron-down animated infinite bounce"></div> -->
 
   <!-- Scripts -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-15632291-6"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> <!-- CDN -->
   <script>window.jQuery || document.write('<script src="assets/js/jquery-2.1.0.min.js"><\/script>')</script> <!-- Fallback -->
   <script src="assets/js/main.js"></script>
