--- a/portfolio/hle.html
+++ b/portfolio/hle.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>BRM | Kyle Langford</title>
+  <title>HLE | Kyle Langford</title>
 
   <meta name="description" content="My name is Kyle Langford, and this is my web design and development portfolio.">
   <meta name="author" rel="me" content="Kyle Langford">
@@ -34,8 +34,8 @@
       </nav>
 
       <div class="column half text--center">
-        <h1 class="page__title">Bally <wbr>Ribbon Mills</h1>
-        <p class="description">Site Design and Build</p>
+        <h1 class="page__title">HLE <wbr>Theming</h1>
+        <p class="description">CSS Architecture</p>
       </div>
 
     </div>
@@ -45,59 +45,22 @@
     <div class="row flex flex--justify pad-default">
       <div class="column two-thirds">
         <article class="content">
-          <h4>Can you tell me again what you do?</h4>
+          <h4>12k lines of css</h4>
 
-          <p>One of my first design projects at Brunello was for a company that produced narrow fabric and advanced composites for industrial/military application. It was important for Bally to be Modern and Authoritive. This design for Bally Ribbon Mills has held up well over the years, even longer than the site itself! This project used sitemaps, wireframes, style-tiles, and full-page mockups. I built the site in Drupal 7.</p>
+          <p>Lorem Ipsum</p>
 
-          <div class="specimen">
+          <!-- <div class="specimen">
             <img src="../assets/img/projects/brm/design-homepage_v3c.jpg"
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Final Homepage Design</div>
-          </div>
-
-          <div class="specimen">
-            <img src="../assets/img/projects/brm/brm-sitemap_v1.jpg"
-                 alt="Elephant at sunset" class="paper">
-            <div class="caption">Final Sitemap</div>
-          </div>
-
-           <div class="specimen">
-            <img src="../assets/img/projects/brm/brm-wires_page_1.png"
-                 alt="Elephant at sunset" class="paper">
-            <div class="caption">Homepage Wireframe</div>
-          </div>
-
-           <div class="specimen">
-            <img src="../assets/img/projects/brm/brm-wires_page_3.png"
-                 alt="Elephant at sunset" class="paper">
-            <div class="caption">Section Wireframe</div>
-          </div>
-
-          <div class="specimen">
-            <img src="../assets/img/projects/brm/brm_tile-2.jpg"
-                 alt="Elephant at sunset" class="paper">
-            <div class="caption">Style Direction #1</div>
-          </div>
-
-          <div class="specimen">
-            <img src="../assets/img/projects/brm/brm_tile-1.jpg"
-                 alt="Elephant at sunset" class="paper">
-            <div class="caption">Style Direction #2</div>
-          </div>
-
-          <div class="specimen text--center">
-            <img src="../assets/img/projects/brm/square-2.jpg"
-                 alt="Elephant at sunset" class="paper">
-            <img src="../assets/img/projects/brm/square-3.jpg"
-                 alt="Elephant at sunset" class="paper">                 
-            <div class="caption">Final Logo</div>
-          </div>
+          </div> -->
 
           <div class="credits">
             <p class="attribution">Work done at Brunello, Inc.</p>
             <ul class="team-list">
-              <li>Adam Hoyle: Project Manager</li>
+              <!-- <li>Adam Hoyle: Project Manager</li> -->
               <li>Kyle Langford: Designer, Drupal Developer</li>
+              <!-- <li>Kyle Langford: Designer, Drupal Developer</li> -->
             </ul>
             <p class="last-edit">Last Edit: 5.30.19</p>
           </div>
