--- a/pages/site-audit.html
+++ b/pages/site-audit.html
@@ -12,7 +12,8 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="../assets/img/brand/favicon.png">
-  
+  <link rel="canonical" href="http://kylelangford.com/pages/site-audit">
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 
@@ -124,6 +125,7 @@
   </section>
 
   <!-- Scripts -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-15632291-6"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> <!-- CDN -->
   <script>window.jQuery || document.write('<script src="../assets/js/jquery-2.1.0.min.js"><\/script>')</script> <!-- Fallback -->
   <script src="../assets/js/main.js"></script>
