--- a/portfolio/hle.html
+++ b/portfolio/hle.html
@@ -1,81 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>HLE | Kyle Langford</title>
+    <title>HLE | Kyle Langford</title>
 
-  <meta name="description" content="My name is Kyle Langford, and this is my web design and development portfolio.">
-  <meta name="author" rel="me" content="Kyle Langford">
+    <meta
+      name="description"
+      content="My name is Kyle Langford, and this is my web design and development portfolio."
+    />
+    <meta name="author" rel="me" content="Kyle Langford" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="../assets/img/brand/favicon.png">
-   <link rel="canonical" href="http://kylelangford.com/portfolio/brm">
- 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="../assets/img/brand/favicon.png" />
+    <link rel="canonical" href="http://kylelangford.com/portfolio/brm" />
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="../assets/css/styles.css">
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
+      rel="stylesheet"
+    />
 
-  <!-- Modernizr - Load after CSS -->
-  <script src="../assets/js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <!-- Styles -->
+    <link rel="stylesheet" href="../assets/css/styles.css" />
 
-</head>
-<body class="page page--front">
+    <!-- Modernizr - Load after CSS -->
+    <script src="../assets/js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+  </head>
+  <body class="page page--portfolio">
+    <header class="container size-to-window brm">
+      <div class="row flex flex-align--center flex--justify fill-height">
+        <nav class="position-top-left">
+          <a href="/portfolio/all.html" class="button--previous"
+            ><span class="icons-skip-back"></span>Back</a
+          >
+        </nav>
 
-  <header class="container size-to-window brm">
-    <div class="row flex flex-align--center flex--justify fill-height">
-
-      <nav class="position-top-left">
-        <a href="/portfolio/all.html" class="button--previous"><span class="icons-skip-back"></span>Back</a>
-      </nav>
-
-      <div class="column half text--center">
-        <h1 class="page__title">HLE <wbr>Theming</h1>
-        <p class="description">CSS Architecture</p>
+        <div class="column half text--center">
+          <h1 class="page__title">HLE <wbr />Theming</h1>
+          <p class="description">CSS Architecture</p>
+        </div>
       </div>
+    </header>
 
-    </div>
-  </header>
+    <main class="container">
+      <div class="row flex flex--justify pad-default">
+        <div class="column two-thirds">
+          <article class="content">
+            <h4>12k lines of css</h4>
 
-  <main class="container">
-    <div class="row flex flex--justify pad-default">
-      <div class="column two-thirds">
-        <article class="content">
-          <h4>12k lines of css</h4>
+            <p>Lorem Ipsum</p>
 
-          <p>Lorem Ipsum</p>
-
-          <!-- <div class="specimen">
+            <!-- <div class="specimen">
             <img src="../assets/img/projects/brm/design-homepage_v3c.jpg"
                  alt="Elephant at sunset" class="paper">
             <div class="caption">Final Homepage Design</div>
           </div> -->
 
-          <div class="credits">
-            <p class="attribution">Work done at Brunello, Inc.</p>
-            <ul class="team-list">
-              <!-- <li>Adam Hoyle: Project Manager</li> -->
-              <li>Kyle Langford: Designer, Drupal Developer</li>
-              <!-- <li>Kyle Langford: Designer, Drupal Developer</li> -->
-            </ul>
-            <p class="last-edit">Last Edit: 5.30.19</p>
-          </div>
-
-        </article>
+            <div class="credits">
+              <p class="attribution">Work done at Brunello, Inc.</p>
+              <ul class="team-list">
+                <!-- <li>Adam Hoyle: Project Manager</li> -->
+                <li>Kyle Langford: Designer, Drupal Developer</li>
+                <!-- <li>Kyle Langford: Designer, Drupal Developer</li> -->
+              </ul>
+              <p class="last-edit">Last Edit: 5.30.19</p>
+            </div>
+          </article>
+        </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <!-- Scripts -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-15632291-6"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> <!-- CDN -->
-  <script>window.jQuery || document.write('<script src="../assets/js/jquery-2.1.0.min.js"><\/script>')</script> <!-- Fallback -->
-  <script src="../assets/js/main.js"></script>
-
+    <!-- Scripts -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-15632291-6"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <!-- CDN -->
+    <script>
+      window.jQuery ||
+        document.write(
+          '<script src="../assets/js/jquery-2.1.0.min.js"><\/script>'
+        );
+    </script>
+    <!-- Fallback -->
+    <script src="../assets/js/main.js"></script>
   </body>
 </html>
-
