--- a/index.html
+++ b/index.html
@@ -1,243 +1,268 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="My name is Kyle Langford, and this is my Design and Web Development portfolio.">
-  <meta name="author" rel="me" content="Kyle Langford">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="My name is Kyle Langford, and this is my Web Design and Development portfolio."
+    />
+    <meta name="author" rel="me" content="Kyle Langford" />
 
-  <title>Design and Web Development | Kyle Langford</title>
+    <title>Web Design and Development | Kyle Langford</title>
 
-  <!-- Load Resources -->
-  <link rel="icon" type="image/png" href="../img/brand/favicon.png">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css">
+    <!-- Load Resources -->
+    <link rel="icon" type="image/png" href="../img/brand/favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/styles.css" />
 
-  <!-- Modernizr - Load after CSS -->
-  <script src="js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <!-- Modernizr - Load after CSS -->
+    <script src="js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <noscript
+      ><style type="text/css">
+        body {
+          opacity: 1;
+        }
+      </style></noscript
+    >
+  </head>
+  <body class="page page--front">
+    <section class="mast-head">
+      <!-- 1. Everhood -->
+      <!-- <h1><a class="site-logo" href="/"> KL</a></h1> -->
+      <!-- <h1><a class="site-logo" href="/">[KL:~/www]$</a></h1> -->
+      <button class="primary-menu-btn">Menu</button>
 
-</head>
-<body class="page page--front">
+      <!-- Sectioned: Nav -->
+      <nav class="primary">
+        <div class="container">
+          <div class="knockout">
+            <!-- <p class="list-title">Menu</p> -->
+            <ul class="menu">
+              <li class="list__item">Portfolio Coming Soon!</li>
+              <!-- <li class="list__item"><a href="/blog/all.html">Blog</a></li> -->
+              <!-- <li class="list__item">
+                <a href="/portfolio/all.html">Portfolio</a>
+              </li> -->
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
 
-  <header class="container intro">
-    <div class="row flex flex-align--center flex--justify fill-height">
-      <!-- 1.0 - Intro Name -->
-      <div class="column half text--center">
-        <h1 class="page__title">Kyle Langford</h1>
-        <h2 class="page__sub-title">Designer and Web Developer</h2>
-        <p class="description">Boston, MA</p>
-      </div>
-    </div>
-  </header>
-
-  <section class="container size-to-window event--close-hint">
-    <div class="row flex flex-align--center fill-height pad-default">
-      <div class="column two-thirds animate fade-in">
-
-        <!-- 1.1 - Intro Description  -->
-        <h2 class="section__title">Welcome!</h2>
-
-        <p class="text--large">I work as a Designer and Web Developer for a Boston based agency. I have 10 years experience and have worked on hundreds of projects over that time. I am passionate about helping people use technology through design and code. I have a positive attitude and enjoy working on all types of projects. </p>
-
-      </div>
-
-      <figure class="image">
-        <img src="assets/img/svg/graphic_design.svg" class="icon-image position-bottom-right">
-      </figure>
-
-    </div>
-  </section>
-
-  <section class="container size-to-window relative">
-    <!-- 2.0 - User Interface Design  -->
-    <header class="row pad-default">
-      <div class="column">
-        <div class="text--display"><strong>UI</strong></div>
-        <p>Modern. Simple. Human.</p>
-      </div>
-    </header>
-    <!-- 2.1 - Specialties -->
-    <div class="row flex pad-default">
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Capabilities</p>
-        <ul class="pretty">
-          <li>App Design</li>
-          <li>CMS Theming</li>
-          <li>Design Systems</li>
-          <li>Email Design</li>
-          <li><span class="icon-list gold-star icons-star"></span>Responsive Web</li>
-        </ul>
-      </div>
-      <!-- 2.2 - Tools -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Design Tools</p>
-        <ul class="pretty">
-          <li>Adobe Photoshop</li>
-          <li>Adobe Illustrator</li>
-          <li><span class="icon-list gold-star icons-star"></span>Browser</li>
-          <li>Pen &amp; Paper</li>
-          <li>Sketch</li>
-        </ul>  
-      </div>
-    </div>
-  </section>
-
-  <section class="container size-to-window relative">
-    <!-- 3.0 - User Experience Design  -->
-    <header class="row pad-default">
-      <div class="column">
-        <div class="text--display"><strong class="chrome">UX</strong></div>
-        <p>Plan. Implement. Iterate.</p>
+    <header class="container intro">
+      <div class="row flex flex-align--center flex--justify fill-height">
+        <!-- 1.0 - Intro Name -->
+        <div class="column half text--center">
+          <h1 class="page__title">Kyle Langford</h1>
+          <h2 class="page__sub-title">Designer and Web Developer</h2>
+          <p class="description">Boston, MA</p>
+        </div>
       </div>
     </header>
 
-    <div class="row flex  pad-default">
-      <div class="column one-fourth animate fade-in">
-        <!-- 3.1 - Capabilities  -->
-        <p class="list-title">Capabilities</p>
-        <ul class="pretty">
-          <li>Accesibility (AA, AAA)</li>
-          <li><span class="icon-list gold-star icons-star"></span>Content Strategy</li>
-          <li>Site Audit</li>
-          <li>Tracking</li>
-          <li>User Research</li>
-          <li>Sitemaps</li>
-          <li>Wireframing</li>
-        </ul>
-      </div>
+    <section class="container size-to-window event--close-hint">
+      <div class="row flex flex-align--center fill-height pad-default">
+        <div class="column two-thirds animate fade-in">
+          <!-- 1.1 - Intro Description  -->
+          <h2 class="section__title">Digital Craftsman</h2>
 
-      <!-- 3.2 - UX Tools -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">UX Tools</p>
-        <ul class="pretty">
-          <li>Balsamiq</li>
-          <li>Invision</li>
-          <li>Google Analytics</li>
-          <li>Pen &amp; Paper</li>
-        </ul>  
-      </div>
+          <p class="text--large">
+            I work as a Designer and Web Developer for a Boston based agency. I
+            have 10 years of professional experience and entrepreneurship. I
+            find motivation in helping people use technology. I focus on
+            designing simple interfaces and writing clean human-readable code. I
+            am passionate about learning new skills and refining my processes. I
+            have a positive attitude and enjoy bringing designs to life whether
+            mine or a client.
+          </p>
+        </div>
 
-    </div>
-  </section>
-
-  <section class="container size-to-window relative">
-    <!-- 4.0 - Frontend Development  -->
-    <header class="row flex--inline  pad-default">
-      <div class="column">
-        <div class="text--display"><strong>FE</strong></div>
-        <p>Design systems, not pages.</p>
+        <figure class="image">
+          <img
+            src="assets/img/svg/graphic_design.svg"
+            class="icon-image position-bottom-right"
+          />
+        </figure>
       </div>
-    </header>
+    </section>
 
-    <div class="row flex  pad-default">
-
-      <!-- 4.1 - Capabilities -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Capabilities</p>
-        <ul class="pretty">
-          <li>Rapid Prototyping</li>
-          <li>Data Visualization</li>
-          <li>Web Forms and Surveys</li>
-          <li>Speed and Performance</li>
-          <li>Solutions Planning</li>
-          <li><span class="icon-list gold-star icons-star"></span>Website Development</li>
-        </ul>
-      </div>
-
-      <!-- 4.2 - Foundation -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Foundation</p>
-        <ul class="pretty">
-          <li><span class="icon-list gold-star icons-star"></span>HTML / CSS</li>
-          <li>Javascript ES5 / jQuery</li>
-          <li>SaSS / ScSS</li>
-          <li>Gulp.js</li>
-          <li>PHP / MySQL</li>
-          <li>Local Development</li>
-          <li>Version Control (Git)</li>
-        </ul>
-      </div>
-
-      <!-- 4.1 - Technologies -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Technologies</p>
-        <ul class="pretty">
-          <li>Angular</li>
-          <li><span class="icon-list gold-star icons-star"></span>Drupal CMS</li>
-          <li>Node / Express</li>
-          <li>Shopify</li>
-          <li>Google Analytics</li>
-          <li>Stripe</li>
-          <li>Mailchimp</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <section class="container contact size-to-window relative">
-    <!-- 5.0 - Contact -->
-    <header class="row pad-default">
-      <div class="column">
-        <h2 class="section__title">Contact</h2>
-      </div>
-    </header>
-
-    <div class="row flex pad-double">
-      <!-- 5.1 - Get in Touch -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Get in Touch</p>
-        <ul class="pretty">
-          <li class="list__item">
-            <a href="mailto:kyle@raskyl.com"><span class="icon icon-list icons-mail"></span>kyle@raskyl.com</a></li>
-          <li class="list__item">
-            <a href="https://github.com/kylelangford"><span class="icon icon-list icons-github"></span>Github</a>
-          </li>
-          <li class="list__item">
-            <a href="https://linkedin.com/in/kylelangford"><span class="icon icon-list icons-linkedin"></span>Linkedin</a>
-          </li>
-        </ul>        
-      </div>
-      <!-- 5.2 - Locations -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Locations</p>
-        Boston, MA <br>
-        Salem, MA
-      </div>
-      <!-- 5.3 - Misc Links -->
-      <div class="column one-fourth animate fade-in">
-        <p class="list-title">Links</p>
+    <section class="container size-to-window relative">
+      <!-- 2.0 - User Interface Design  -->
+      <header class="row pad-default">
+        <div class="column">
+          <div class="text--display"><strong>UI</strong></div>
+          <p>Modern. Simple. Human.</p>
+        </div>
+      </header>
+      <!-- 2.1 - Capabilities -->
+      <div class="row flex pad-default">
+        <div class="column one-fourth animate fade-in">
+          <p class="list-title">Capabilities</p>
           <ul class="pretty">
-          <li class="list__item">
-            <a href="/pages/bookmarks.html"><span class="icon-list icons-bookmark"></span>My Bookmarks</a></li>
-          <li class="list__item">
-            <a href="http://swordofdanklin.com"><span class="icon-list icons-bookmark"></span>Sword of Danklin</a></li>
-          <li class="list__item">
-            <a href="/portfolio/all.html"><span class="icon-list icons-award"></span>My Portfolio</a></li>
-          <li class="list__item">
-            <a href="/assets/resume/klangford_2019.pdf"><span class="icon-list icons-download-cloud"></span>My Resume</a></li>
+            <li>Pattern Library</li>
+            <li>Information Architecture</li>
+            <li>Responsive Web Design</li>
+            <li>Sitemaps</li>
+            <li>Wireframing</li>
           </ul>
+        </div>
+        <!-- 2.2 - Design Tools -->
+        <div class="column one-fourth animate fade-in">
+          <p class="list-title">Design Tools</p>
+          <ul class="pretty">
+            <li>Adobe Photoshop</li>
+            <li>Adobe Illustrator</li>
+            <li>Chrome Developer Tools</li>
+            <li>Sketch</li>
+          </ul>
+        </div>
+        <div class="column one-fourth animate fade-in">
+          <!-- 3.1 - Capabilities  -->
+          <p class="list-title">Experience Design</p>
+          <ul class="pretty">
+            <li>Accessibility</li>
+            <li>Analytics</li>
+            <li>A/B Testing</li>
+            <li>User Feedback</li>
+          </ul>
+        </div>
       </div>
-    </div>
+    </section>
 
-    <footer class="row pad-double stick-bottom">
-      <ul class="inline">
-        <li class="list__item">
-          <!-- 6.0 - Credits -->
-          <p class="copy collapse">&copy; Kyle Langford 2019.</p>
-        </li>
-      </ul>
-    </footer>
-  </section>
+    <section class="container size-to-window relative">
+      <!-- 4.0 - Frontend Development  -->
+      <header class="row flex--inline  pad-default">
+        <div class="column">
+          <div class="text--display"><strong>FE</strong></div>
+          <!-- <p>Design systems, not pages.</p> -->
+          <p>Plan. Implement. Iterate.</p>
+        </div>
+      </header>
 
-  <!-- <div class="hint icons-chevron-down animated infinite bounce"></div> -->
+      <div class="row flex  pad-default">
+        <!-- 4.1 - Capabilities -->
+        <div class="column one-fourth animate fade-in">
+          <p class="list-title">Capabilities</p>
+          <ul class="pretty">
+            <li>HTML Prototyping</li>
+            <li>Solutions Planning</li>
+            <li>Design Systems</li>
+            <li>Website Development</li>
+            <li>Site Performance</li>
+            <li>Workflow Automation</li>
+          </ul>
+        </div>
 
-  <!-- Scripts -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-15632291-6"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> <!-- CDN -->
-  <script>window.jQuery || document.write('<script src="assets/js/jquery-2.1.0.min.js"><\/script>')</script> <!-- Fallback -->
-  <script src="assets/js/main.js"></script>
+        <!-- 4.2 - Foundation -->
+        <div class="column one-fourth animate fade-in">
+          <p class="list-title">Core</p>
+          <ul class="pretty">
+            <li>HTML / CSS</li>
+            <li>Javascript ES6</li>
+            <li>Gulp.js / NPM</li>
+            <li>Version Control: Git</li>
+          </ul>
+        </div>
 
+        <!-- 4.1 - Technologies -->
+        <div class="column one-fourth animate fade-in">
+          <p class="list-title">Technologies</p>
+          <ul class="pretty">
+            <li>AngularJS / Angular</li>
+            <li>Drupal CMS</li>
+            <li>Node.js</li>
+            <li>Shopify CMS</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="container contact size-to-window relative">
+      <!-- 5.0 - Contact -->
+      <header class="row pad-default">
+        <div class="column">
+          <h2 class="section__title">Info</h2>
+        </div>
+      </header>
+
+      <div class="row flex pad-double">
+        <!-- 5.1 - Get in Touch -->
+        <div class="column one-fourth animate fade-in">
+          <p class="list-title">Get in Touch</p>
+          <ul class="pretty">
+            <li class="list__item">
+              <a href="mailto:kyle@raskyl.com"
+                ><span class="icon icon-list icons-mail"></span
+                >kyle@raskyl.com</a
+              >
+            </li>
+            <li class="list__item">
+              <a href="https://github.com/kylelangford"
+                ><span class="icon icon-list icons-github"></span>Github</a
+              >
+            </li>
+            <li class="list__item">
+              <a href="https://linkedin.com/in/kylelangford"
+                ><span class="icon icon-list icons-linkedin"></span>Linkedin</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!-- 5.2 - Locations -->
+        <div class="column one-fourth animate fade-in">
+          <p class="list-title">Locations</p>
+          Boston, MA <br />
+          Salem, MA
+        </div>
+        <!-- 5.3 - Misc Links -->
+        <div class="column one-fourth animate fade-in">
+          <p class="list-title">Links</p>
+          <ul class="pretty">
+            <li class="list__item">
+              <a href="/pages/bookmarks.html"
+                ><span class="icon-list icons-bookmark"> </span>Bookmarks</a
+              >
+            </li>
+            <li class="list__item">
+              <a href="/assets/resume/klangford_2019.pdf"
+                ><span class="icon-list icons-download-cloud"></span>Resume</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <footer class="row pad-double stick-bottom">
+        <ul class="inline">
+          <li class="list__item">
+            <!-- 6.0 - Credits -->
+            <p class="copy collapse">&copy; Kyle Langford 2019.</p>
+          </li>
+        </ul>
+      </footer>
+    </section>
+
+    <!-- <div class="hint icons-chevron-down animated infinite bounce"></div> -->
+
+    <!-- Scripts -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-15632291-6"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <!-- CDN -->
+    <script>
+      window.jQuery ||
+        document.write(
+          '<script src="assets/js/jquery-2.1.0.min.js"><\/script>'
+        );
+    </script>
+    <!-- Fallback -->
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
-
