--- a/portfolio/fitnessapp.html
+++ b/portfolio/fitnessapp.html
@@ -1,97 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Fitness App | Kyle Langford</title>
+    <title>Fitness App | Kyle Langford</title>
 
-  <meta name="description" content="My name is Kyle Langford, and this is my web design and development portfolio.">
-  <meta name="author" rel="me" content="Kyle Langford">
+    <meta
+      name="description"
+      content="My name is Kyle Langford, and this is my web design and development portfolio."
+    />
+    <meta name="author" rel="me" content="Kyle Langford" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="../assets/img/brand/favicon.png">
-  <link rel="canonical" href="http://kylelangford.com/portfolio/fitnessapp">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="../assets/img/brand/favicon.png" />
+    <link rel="canonical" href="http://kylelangford.com/portfolio/fitnessapp" />
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+    <!-- Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Rubik"
+      rel="stylesheet"
+    />
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="../assets/css/styles.css">
+    <!-- Styles -->
+    <link rel="stylesheet" href="../assets/css/styles.css" />
 
-  <!-- Modernizr - Load after CSS -->
-  <script src="../assets/js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    <!-- Modernizr - Load after CSS -->
+    <script src="../assets/js/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+  </head>
+  <body class="page page--portfolio">
+    <header class="container size-to-window elev8d">
+      <div class="row flex flex-align--center flex--justify fill-height">
+        <nav class="position-top-left">
+          <a href="/portfolio/all.html" class="button--previous"
+            ><span class="icons-skip-back"></span>Back</a
+          >
+        </nav>
 
-</head>
-<body class="page page--front">
-
-  <header class="container size-to-window elev8d">
-    <div class="row flex flex-align--center flex--justify fill-height">
-
-      <nav class="position-top-left">
-        <a href="/portfolio/all.html" class="button--previous"><span class="icons-skip-back"></span>Back</a>
-      </nav>
-
-      <div class="column half text--center">
-        <h1 class="page__title">Elev8d Fitness</h1>
-        <p class="description">Angular Video Component and Playlist</p>
+        <div class="column half text--center">
+          <h1 class="page__title">Elev8d Fitness</h1>
+          <p class="description">Angular Video Component and Playlist</p>
+        </div>
       </div>
+    </header>
 
-    </div>
-  </header>
+    <main class="container">
+      <div class="row flex flex--justify pad-default">
+        <div class="column two-thirds">
+          <article class="content">
+            <h4>HTML5 Video Magic</h4>
 
-  <main class="container">
-    <div class="row flex flex--justify pad-default">
-      <div class="column two-thirds">
-        <article class="content">
-          <h4>HTML5 Video Magic</h4>
+            <p>
+              Elev8d Fitness app provided users with full-length video workouts
+              as well as guided video playlists. The original Angular build was
+              riddled with bugs and had a very confusing design. This was a
+              webview app so that presented a lot of challenges with video
+              playback. We were able to design a player that simplified the UI
+              and allowed seamless playing. I focused on transitions and
+              animation to give a more native app feel. This project was the
+              first time I had worked with Angular v5 and typescript which made
+              this challanging.
+            </p>
 
-          <p>Elev8d Fitness app provided users with full-length video workouts as well as guided video playlists. The original Angular build was riddled with bugs and had a very confusing design. This was a webview app so that presented a lot of challenges with video playback. We were able to design a player that simplified the UI and allowed seamless playing. I focused on transitions and animation to give a more native app feel. This project was the first time I had worked with Angular v5 and typescript which made this challanging.</p>
+            <div class="specimen">
+              <img
+                src="../assets/img/projects/elev8d/video-player.jpg"
+                alt="Elephant at sunset"
+                class="paper"
+              />
+              <div class="caption">Redesigned Player.</div>
+            </div>
 
-          <div class="specimen">
-            <img src="../assets/img/projects/elev8d/video-player.jpg"
-                 alt="Elephant at sunset" class="paper">
-            <div class="caption">Redesigned Player.</div>
-          </div>
+            <div class="specimen">
+              <img
+                src="../assets/img/projects/elev8d/060-screenshot.jpg"
+                alt="Elephant at sunset"
+                class="paper"
+              />
+              <div class="caption">Original Player.</div>
+            </div>
 
-          <div class="specimen">
-            <img src="../assets/img/projects/elev8d/060-screenshot.jpg"
-                 alt="Elephant at sunset" class="paper">
-            <div class="caption">Original Player.</div>
-          </div>
+            <video controls width="100%" class="video-player">
+              <source
+                src="../assets/video/video-player-workout.webm"
+                type="video/webm"
+              />
+              <source
+                src="../assets/video/video-player-workout.mp4"
+                type="video/mp4"
+              />
 
-          <video controls width="100%" class="video-player">
-            <source src="../assets/video/video-player-workout.webm"
-                    type="video/webm">
-            <source src="../assets/video/video-player-workout.mp4"
-                    type="video/mp4">
+              Sorry, your browser doesn't support embedded videos.
+            </video>
 
-            Sorry, your browser doesn't support embedded videos.
-          </video>
-          
-          <div class="credits">
-            <p class="attribution">Work done at Brunello, Inc.</p>
-            <ul class="team-list">
-              <li>Nicole Baltzer: PM</li>
-              <li>Jason Fournier: Designer</li>
-              <li>Kyle Langford: Designer, Front-End Developer</li>
-              <li>Christian: Developer</li>
-            </ul>
-            <p class="last-edit">Last Edit: 5.30.19</p>
-          </div>
-
-        </article>
+            <div class="credits">
+              <p class="attribution">Work done at Brunello, Inc.</p>
+              <ul class="team-list">
+                <li>Nicole Baltzer: PM</li>
+                <li>Jason Fournier: Designer</li>
+                <li>Kyle Langford: Designer, Front-End Developer</li>
+                <li>Christian: Developer</li>
+              </ul>
+              <p class="last-edit">Last Edit: 5.30.19</p>
+            </div>
+          </article>
+        </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <!-- Scripts -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-15632291-6"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script> <!-- CDN -->
-  <script>window.jQuery || document.write('<script src="../assets/js/jquery-2.1.0.min.js"><\/script>')</script> <!-- Fallback -->
-  <script src="../assets/js/main.js"></script>
-
+    <!-- Scripts -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-15632291-6"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+    <!-- CDN -->
+    <script>
+      window.jQuery ||
+        document.write(
+          '<script src="../assets/js/jquery-2.1.0.min.js"><\/script>'
+        );
+    </script>
+    <!-- Fallback -->
+    <script src="../assets/js/main.js"></script>
   </body>
 </html>
-
