updating latest code

--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
     >
   </head>
   <body class="page page--front">
-    <section class="mast-head">
-      <!-- 1. Everhood -->
-      <!-- <h1><a class="site-logo" href="/"> KL</a></h1> -->
-      <!-- <h1><a class="site-logo" href="/">[KL:~/www]$</a></h1> -->
-      <button class="primary-menu-btn">Menu</button>
+    <!-- <section class="mast-head"> -->
+    <!-- 1. Everhood -->
+    <!-- <h1><a class="site-logo" href="/"> KL</a></h1> -->
+    <!-- <h1><a class="site-logo" href="/">[KL:~/www]$</a></h1> -->
+    <!-- <button class="primary-menu-btn">Menu</button> -->
 
-      <!-- Sectioned: Nav -->
-      <nav class="primary">
+    <!-- Sectioned: Nav -->
+    <!--       <nav class="primary">
         <div class="container">
-          <div class="knockout">
-            <!-- <p class="list-title">Menu</p> -->
-            <ul class="menu">
-              <li class="list__item">Portfolio Coming Soon!</li>
-              <!-- <li class="list__item"><a href="/blog/all.html">Blog</a></li> -->
-              <!-- <li class="list__item">
+          <div class="knockout"> -->
+    <!-- <p class="list-title">Menu</p> -->
+    <!--             <ul class="menu">
+              <li class="list__item">Portfolio Coming Soon!</li> -->
+    <!-- <li class="list__item"><a href="/blog/all.html">Blog</a></li> -->
+    <!-- <li class="list__item">
                 <a href="/portfolio/all.html">Portfolio</a>
               </li> -->
-            </ul>
+    <!--             </ul>
           </div>
         </div>
       </nav>
-    </section>
+    </section> -->
 
     <header class="container intro">
       <div class="row flex flex-align--center flex--justify fill-height">
